fix: change footer socials gap

--- a/coffee-house/scss/blocks/_socials.scss
+++ b/coffee-house/scss/blocks/_socials.scss
@@ -2,7 +2,7 @@
 }
 .socials__list {
   display: flex;
-  column-gap: 12px;
+  column-gap: 10px;
   margin: 0;
   padding: 0;
   list-style: none;
